add irigation faq

--- a/src/content/pages/services/irrigation.html
+++ b/src/content/pages/services/irrigation.html
@@ -9,6 +9,95 @@ permalink: 'services/irrigation/'
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/services.css">
+    <script defer src="/assets/js/faq.js"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "When should I schedule my spring irrigation start-up?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We recommend scheduling your spring start-up in April or early May, after the last freeze. During start-up, we inspect and restart your system, check for leaks, adjust sprinkler heads, and verify proper coverage before your first watering cycle."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is winterization and why is it important?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Winterization (shut-down) is the process of using professional air compression equipment to blow out all water from your irrigation lines. Michigan winters can cause costly freeze damage if lines aren't properly cleared. We guarantee freeze protection with a warranty—if your system was shut down by us and experiences freeze damage, we'll warranty the repairs."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "When should I winterize my irrigation system?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Schedule winterization in late October or early November, before the first hard freeze. Waiting too long can result in freeze damage to your pipes, valves, and sprinkler heads."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What types of irrigation repairs do you handle?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We repair leaks, replace broken sprinkler heads, fix wiring and control boxes, service all brands of irrigation systems, and handle everything from small fixes to 15-zone repairs. We're equipped to diagnose and fix any irrigation system issue."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you provide backflow testing?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We're equipped to test, certify, and repair backflow preventers for residential and commercial systems. Annual backflow testing protects your water supply and helps you stay compliant with local regulations."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can you upgrade my irrigation timer or control box?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We can upgrade your outdated irrigation controls with smart or manual timer replacements. We'll help you set efficient watering schedules that reduce waste and lower your water bill."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you work on all brands of irrigation systems?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. Our expert irrigation technicians service all brands of irrigation systems, from small residential setups to large commercial installations."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How much do irrigation services cost?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Pricing depends on your system size, the type of service needed, and any repairs required. We provide transparent, upfront pricing and free estimates so you know exactly what to expect before we begin work."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer emergency irrigation repairs?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We offer fast response times for irrigation emergencies like major leaks or broken main lines. Contact us right away and we'll work to minimize water waste and damage."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Why choose Macomb Landscaping Services for irrigation work?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We're one of the few landscaping companies in Macomb that handles irrigation work completely in-house with expert technicians. We offer full-service solutions (start-up, maintenance, repair, and shut-down), a freeze damage warranty for systems we winterize, fast response times, and honest recommendations you can trust."
+          }
+        }
+      ]
+    }
+    </script>
 {% endblock %}
 
 {% block body %}
@@ -102,11 +191,146 @@ permalink: 'services/irrigation/'
 
             <h2>Request Your Irrigation Service Today</h2>
             <p>
-                Keep your sprinkler system running smoothly all year long — contact <strong>Macomb Landscaping Services</strong> today for professional irrigation start-up, shut-down, and repair services. 
+                Keep your sprinkler system running smoothly all year long — contact <strong>Macomb Landscaping Services</strong> today for professional irrigation start-up, shut-down, and repair services.
                 Call or text us for a free estimate.
             </p>
         </div>
     </div>
+</section>
+
+<!-- ============================================ -->
+<!--                     FAQ                      -->
+<!-- ============================================ -->
+
+<section id="faq-1404">
+  <div class="cs-container">
+    <div class="cs-content">
+      <span class="cs-topper">FAQ</span>
+      <h2 class="cs-title">Frequently Asked Questions</h2>
+    </div>
+    <div class="cs-faq-group">
+      <!-- FAQ Item 1 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">When should I schedule my spring irrigation start-up?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We recommend scheduling your spring start-up in April or early May, after the last freeze. During start-up, we inspect and restart your system, check for leaks, adjust sprinkler heads, and verify proper coverage before your first watering cycle.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 2 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What is winterization and why is it important?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Winterization (shut-down) is the process of using professional air compression equipment to blow out all water from your irrigation lines. Michigan winters can cause costly freeze damage if lines aren't properly cleared. We guarantee freeze protection with a warranty—if your system was shut down by us and experiences freeze damage, we'll warranty the repairs.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 3 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">When should I winterize my irrigation system?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Schedule winterization in late October or early November, before the first hard freeze. Waiting too long can result in freeze damage to your pipes, valves, and sprinkler heads.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 4 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What types of irrigation repairs do you handle?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We repair leaks, replace broken sprinkler heads, fix wiring and control boxes, service all brands of irrigation systems, and handle everything from small fixes to 15-zone repairs. We're equipped to diagnose and fix any irrigation system issue.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 5 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you provide backflow testing?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We're equipped to test, certify, and repair backflow preventers for residential and commercial systems. Annual backflow testing protects your water supply and helps you stay compliant with local regulations.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 6 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Can you upgrade my irrigation timer or control box?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We can upgrade your outdated irrigation controls with smart or manual timer replacements. We'll help you set efficient watering schedules that reduce waste and lower your water bill.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 7 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you work on all brands of irrigation systems?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. Our expert irrigation technicians service all brands of irrigation systems, from small residential setups to large commercial installations.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 8 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How much do irrigation services cost?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Pricing depends on your system size, the type of service needed, and any repairs required. We provide transparent, upfront pricing and free estimates so you know exactly what to expect before we begin work.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 9 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you offer emergency irrigation repairs?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We offer fast response times for irrigation emergencies like major leaks or broken main lines. Contact us right away and we'll work to minimize water waste and damage.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 10 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Why choose Macomb Landscaping Services for irrigation work?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We're one of the few landscaping companies in Macomb that handles irrigation work completely in-house with expert technicians. We offer full-service solutions (start-up, maintenance, repair, and shut-down), a freeze damage warranty for systems we winterize, fast response times, and honest recommendations you can trust.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 {% include 'components/cta.html' %}
