add json-ld to faq

--- a/src/content/pages/services/guttercleaning.html
+++ b/src/content/pages/services/guttercleaning.html
@@ -10,6 +10,94 @@ permalink: 'services/gutter-cleaning/'
 {% block head %}
     <link rel="stylesheet" href="/assets/css/services.css">
     <script defer src="/assets/js/faq.js"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How often should I have my gutters cleaned?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We recommend cleaning gutters at least twice per year—once in spring to clear winter debris and prepare for heavy rains, and once in late fall after most leaves have dropped to prep for winter storms and freeze/thaw cycles."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What does your gutter cleaning service include?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Our service includes hand removal of leaves, twigs, and roof debris from gutters, complete downspout flushing to ensure clear drainage, minor adjustments to loose hangers and pitch issues, bagging and disposal of all debris, and a visual inspection for trouble spots like leaks, sagging, or separations."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How much does gutter cleaning cost in Macomb, MI?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Pricing varies based on your home's size, gutter length, and debris level. We provide clear, upfront pricing and free estimates so you know exactly what to expect before we begin work."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What happens if clogged gutters aren't cleaned?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Clogged gutters can lead to serious problems including roof leaks, fascia and soffit rot, foundation damage from water pooling, basement flooding, exterior staining, and erosion around your home's perimeter. Regular cleaning prevents these costly issues."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you flush downspouts as part of the service?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. Complete downspout flushing is included in every gutter cleaning to ensure clear drainage from the roof all the way to ground level. This prevents clogs that can cause water backup and overflow."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are you insured for gutter cleaning work?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. Our team is fully insured and follows safe ladder and roof practices to protect both our crew and your property during the cleaning process."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What do you do with the debris from my gutters?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We bag and dispose of all debris removed from your gutters—no mess is left behind. Your property will be clean when we're finished."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer underground gutter drainage installation?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We install underground buried gutter drainage systems that connect your downspouts to buried PVC pipes, directing water safely away from your foundation. This eliminates surface runoff, prevents erosion and foundation issues, and keeps your landscaping clean and dry year-round."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can you fix minor gutter problems while cleaning?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We make minor adjustments to loose hangers and visible pitch issues during cleaning. We also offer add-on services like gutter whitening (exterior stain cleanup), leaf guard installation, and small seam reseals."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "When do I pay for the gutter cleaning service?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No payment is due until the job is completed to your satisfaction. We also provide before/after photos upon request so you can see the quality of our work."
+          }
+        }
+      ]
+    }
+    </script>
 {% endblock %}
 
 {% block body %}
