--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -10,6 +10,94 @@ permalink: 'services/snow-removal/'
 {% block head %}
     <link rel="stylesheet" href="/assets/css/services.css">
     <script defer src="/assets/js/faq.js"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How much does snow removal cost in Macomb, MI?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Pricing depends on driveway size, property type, and whether you choose per-push or a seasonal contract. Most residential visits range from $35–$75, while commercial pricing varies based on lot size and service frequency."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer both residential and commercial snow removal?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We provide snow plowing, shoveling, and deicing for homes, businesses, storefronts, offices, and commercial lots throughout Macomb County."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What snow depth triggers a service visit?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Common trigger depths are 1\" or 2\", but we offer custom trigger settings based on your preferences and property needs."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer deicing or salting services?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We apply salt, ice-melt blends, or calcium chloride depending on conditions. Deicing can be included in your contract or added per visit."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can you clear walkways, porches, and entrances?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolutely. We clear all pedestrian areas including sidewalks, entry steps, porches, pathways, and storefront walkways."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you service properties before business hours?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. Commercial clients receive priority morning service to ensure lots and entrances are clear before customers or employees arrive."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you monitor storms and dispatch automatically?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We offer 24/7 storm monitoring and automatically dispatch crews during qualifying snowfall events for seasonal contract customers."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you provide return visits if the city plow blocks my driveway?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We offer return visits for municipal plow berms and drifting based on your service plan or contract terms."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are you insured for snow removal work?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. Our team is fully insured for both residential and commercial snow removal services."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How early should I sign up for winter service?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Most customers secure their contract between July and September. Early sign-up ensures priority routing and may qualify for discounted pricing."
+          }
+        }
+      ]
+    }
+    </script>
 {% endblock %}
 
 {% block body %}
